test-output/src/tests/snapshots/test_output__tests__output__erlang-echo_bitarray.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo <<>>
  echo <<1, 2, 3>>
  echo <<1, 2, 3:2>>
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
""
[90msrc/main.gleam:6[39m
<<1, 2, 3>>
[90msrc/main.gleam:7[39m
<<1, 2, 3:size(2)>>
