test-output/src/tests/snapshots/test_output__tests__output__erlang-echo_non_record_atom_tag.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2025 The Gleam contributors

pub fn main() {
  echo #(to_atom("UP"), 1, 2)
  echo #(to_atom("down"), 12.34)
  echo #(to_atom("Both"), "ok")
}

pub type Atom

@external(erlang, "erlang", "binary_to_atom")
pub fn to_atom(string: String) -> Atom


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
#(atom.create("UP"), 1, 2)
[90msrc/main.gleam:6[39m
Down(12.34)
[90msrc/main.gleam:7[39m
#(atom.create("Both"), "ok")
