test-output/src/tests/snapshots/test_output__tests__output__erlang-linked_process_exit.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

@external(erlang, "main_ffi", "spawn_and_exit")
fn spawn_and_exit() -> Nil

pub fn main() {
  spawn_and_exit()
}


--- gleam run output ----------------
[31;1mruntime error[39m: Erlang exit[0m

An error occurred outside of Gleam.

exit reason:
  {shutdown,<<"test reason">>}
